# search-agent

./: .dockerignore  .env.example  .gitignore  README.md  company 1.json  design.md  docker-compose.yml  person 1.json
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  evidence_contract.py  graph_store.py  ids.py  llm.py  logging_config.py  main.py  schemas.py  service.py  state_views.py
backend/app/agents/: __init__.py  graph.py  planner.py  prompt_budget.py  prompts.py  researcher.py  state.py  visualizer.py
backend/app/memory/: __init__.py  canonicalizer.py  checkpoint.py  chroma_store.py  compactor.py  graph_ops.py  long_term.py  policy.py
backend/app/tools/: __init__.py  contracts.py  registry.py  repository.py  specs.py
backend/tests/: conftest.py  fakes.py  scenarios.py  test_api.py
backend/tests/integration/: __init__.py  test_chroma_fallback.py  test_runtime_persistence.py  test_three_turn_chroma.py
backend/tests/live/: test_openai_contract.py
backend/tests/unit/: test_agent_payloads.py  test_agents.py  test_checkpoint_state.py  test_compactor.py  test_data_tools.py  test_live_audit_script.py  test_llm.py  test_llm_native_tools.py  test_memory.py  test_prompt_contracts_v2.py  test_raw_dataset_matrix.py  test_researcher_native_v2.py  test_state_views.py  test_tools_v2.py  test_trace_contract_v2.py
data/: README.md  relations 1.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
scripts/: full_dataset_audit.py  live_audit.py  smoke.sh
(+16 files in other folders)
