[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "enterprise-relationship-explorer"
version = "0.1.0"
description = "LangGraph-powered enterprise relationship exploration MVP"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiosqlite==0.21.0",
  "chromadb==1.5.9",
  "fastapi==0.139.0",
  "langchain-openai==1.3.5",
  "langgraph==1.2.9",
  "langgraph-checkpoint-sqlite==3.1.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.11.0",
  "python-json-logger==3.3.0",
  "tiktoken==0.13.0",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
test = [
  "httpx2==2.7.0",
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-cov==6.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: requires an external service such as Chroma",
  "live: requires a real OpenAI API key and may incur cost",
]

[tool.coverage.run]
branch = true
source = ["app"]
